--- a/ticket.html
+++ b/ticket.html
@@ -53,35 +53,76 @@
                             <p>بلیط شما با موفقیت صادر شد.</p>
                         </div>
                     </div>
+                    <div class="uk-margin-medium-bottom">
+                        <div class="uk-background-muted uk-border-rounded uk-padding-small">
+                            <h3 class="uk-text-secondary uk-text-small font f700 uk-margin-small-bottom uk-display-block">اطلاعات مسابقه :</h3>
+                            <ul class="uk-child-width-1-1 uk-child-width-1-3@s uk-grid-divider uk-grid-small uk-text-center" data-uk-grid>
+                                <li>
+                                    <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">مسابقه :</span>
+                                    <span class="uk-text-small uk-text-secondary font f500">ملوان - استقلال ملاثانی</span>
+                                </li>
+                                <li>
+                                    <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">زمان برگذاری :</span>
+                                    <span class="uk-text-small uk-text-secondary font f500">یکشنبه ۱ خرداد</span>
+                                </li>
+                                <li>
+                                    <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">تعداد بلیط :</span>
+                                    <span class="uk-text-small uk-text-secondary font f500">۲ بلیط</span>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div>
-                        <div class="uk-child-width-1-1 uk-child-width-1-2@s uk-text-zero" data-uk-grid>
+                        <div class="uk-child-width-1-1 uk-child-width-1-3@s uk-text-zero uk-grid-divider" data-uk-grid>
                             <div>
-                                <h3 class="uk-text-secondary font f700 uk-margin-small-bottom uk-display-block">اطلاعات بلیط :</h3>
-                                <ul class="uk-list uk-list-divider">
+                                <div>
+                                    <h3 class="uk-text-secondary uk-text-small font f700 uk-margin-small-bottom uk-display-block">اطلاعات بلیط 1 :</h3>
+                                    <ul class="uk-list uk-margin-remove">
+                                        <li>
+                                            <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد ملی :</span>
+                                            <span class="uk-text-small uk-text-secondary font f500">۸۹۸۷۸۴۹۷۷۹</span>
+                                        </li>
+                                        <li>
+                                            <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد خرید :</span>
+                                            <span class="uk-text-small uk-text-secondary font f500">35444454564564</span>
+                                            <span class="uk-display-block uk-margin-top">
+                                                <img src="img/qr-code.png" width="100" height="100">
+                                            </span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div>
+                                <h3 class="uk-text-secondary uk-text-small font f700 uk-margin-small-bottom uk-display-block">اطلاعات بلیط 2 :</h3>
+                                <ul class="uk-list uk-margin-remove">
                                     <li>
-                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">مسابقه :</span>
-                                        <span class="uk-text-small uk-text-secondary font f500">ملوان - سپیدرود</span>
-                                    </li>
-                                    <li>
-                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">زمان برگذاری :</span>
-                                        <span class="uk-text-small uk-text-secondary font f500">یکشنبه ۱ خرداد ۱۴۰۱</span>
-                                    </li>
-                                    <li>
-                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">تعداد بلیط :</span>
-                                        <span class="uk-text-small uk-text-secondary font f500">۵ بلیط</span>
-                                        <a href="#" class="uk-text-tiny uk-text-secondary font f500 uk-float-left people">مشاهده نفرات</a>
+                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد ملی :</span>
+                                        <span class="uk-text-small uk-text-secondary font f500">۸۹۸۷۸۴۹۷۷۹</span>
                                     </li>
                                     <li>
                                         <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد خرید :</span>
-                                        <span class="uk-text-small uk-text-secondary font f500">35444454654564564</span>
+                                        <span class="uk-text-small uk-text-secondary font f500">35444654564564</span>
+                                        <span class="uk-display-block uk-margin-top">
+                                            <img src="img/qr-code.png" width="100" height="100">
+                                        </span>
                                     </li>
                                 </ul>
                             </div>
                             <div>
-                                <h3 class="uk-text-secondary font f700 uk-margin-small-bottom uk-display-block">کد بلیط :</h3>
-                                <div class="uk-text-center">
-                                    <img src="img/qr-code.png" width="547" height="547" alt="QR Code" class="uk-width-small">
-                                </div>
+                                <h3 class="uk-text-secondary uk-text-small font f700 uk-margin-small-bottom uk-display-block">اطلاعات بلیط 3 :</h3>
+                                <ul class="uk-list uk-margin-remove">
+                                    <li>
+                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد ملی :</span>
+                                        <span class="uk-text-small uk-text-secondary font f500">۸۹۸۷۸۴۹۷۷۹</span>
+                                    </li>
+                                    <li>
+                                        <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">کد خرید :</span>
+                                        <span class="uk-text-small uk-text-secondary font f500">35444654564564</span>
+                                        <span class="uk-display-block uk-margin-top">
+                                            <img src="img/qr-code.png" width="100" height="100">
+                                        </span>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
