--- a/ticket.html
+++ b/ticket.html
@@ -48,15 +48,24 @@
                             </div>
                         </div>
                     </div>
-                    <div class="uk-margin-medium-bottom">
+                    <div class="uk-margin-small-bottom">
                         <div class="uk-alert uk-alert-success uk-text-center font f700">
                             <p>بلیط شما با موفقیت صادر شد.</p>
+                        </div>
+                    </div>
+                    <div class="uk-margin-medium-bottom uk-text-center">
+                        <a href="#rulesModal" data-uk-toggle class="font f500 uk-text-danger uk-text-small uk-display-inline-block">لیست اقلام ممنوعه ورود به ورزشگاه</a>
+                    </div>
+                    <div id="rulesModal" class="uk-flex-top" data-uk-modal>
+                        <div class="uk-modal-dialog uk-width-auto uk-margin-auto-vertical">
+                            <button class="uk-modal-close-outside" type="button" data-uk-close></button>
+                            <img src="" width="" height="" alt="">
                         </div>
                     </div>
                     <div class="uk-margin-medium-bottom">
                         <div class="uk-background-muted uk-border-rounded uk-padding-small">
                             <h3 class="uk-text-secondary uk-text-small font f700 uk-margin-small-bottom uk-display-block">اطلاعات مسابقه :</h3>
-                            <ul class="uk-child-width-1-1 uk-child-width-1-3@s uk-grid-divider uk-grid-small uk-text-center" data-uk-grid>
+                            <ul class="uk-child-width-1-1 uk-child-width-1-3@s uk-grid-divider uk-grid-small uk-text-right uk-text-center@s" data-uk-grid>
                                 <li>
                                     <span class="uk-text-small uk-text-muted font f300 uk-margin-small-left">مسابقه :</span>
                                     <span class="uk-text-small uk-text-secondary font f500">ملوان - استقلال ملاثانی</span>
